force-app/main/default/objects/cmcMule__secretManager__c/cmcMule__secretManager__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>secretManager</label>
</CustomObject>