force-app/main/default/objects/cmcMule__secretManager__c/fields/cmcMule__Mule_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcMule__Mule_Client_Id__c</fullName>
    <label>Mule_Client_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>