force-app/main/default/objects/cmcMule__secretManager__c/fields/cmcMule__Named_Credentials_Label__c.field-meta.xml
<CustomField>
    <fullName>cmcMule__Named_Credentials_Label__c</fullName>
    <label>Named Credentials Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>