force-app/main/default/objects/cmcMule__secretManager__c/fields/cmcMule__Project_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcMule__Project_Id__c</fullName>
    <label>Project Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>