force-app/main/default/objects/cmcMule__secretManager__c/fields/cmcMule__Secret_Id__c.field-meta.xml
<CustomField>
    <fullName>cmcMule__Secret_Id__c</fullName>
    <description>Secret Id of secret manager</description>
    <label>Secret_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>