force-app/main/default/objects/cmcMule__secretManager__c/fields/cmcMule__Secrets__c.field-meta.xml
<CustomField>
    <fullName>cmcMule__Secrets__c</fullName>
    <label>Secrets</label>
    <length>255</length>
    <type>Text</type>
</CustomField>